@@ -360,6 +360,9 @@ Version 1.5.1 -- CVS
   - Move documentation for SquirrelMail developers to doc/Development.
   - Added id attribute support to form functions. It can be used for Section 
     508 or WAI fixes. Original idea and patch by dugan <at> passwall.com.
+  - Fixed broken attachments caused by inconsistency of PHP chunk_split().
+    Thanks to Roalt Zijlstra.
+
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
